--- a/app/styles/sideNav.module.css
+++ b/app/styles/sideNav.module.css
@@ -44,11 +44,11 @@
   }
 
   .sideTop {
-    gap: 30px;
+    gap: 20px;
     width: 100%;
     display: flex;
     height: inherit;
-    align-items: center;
+    align-items: start;
     flex-direction: column;
     overflow: auto;
     overflow-y: auto;
@@ -63,7 +63,12 @@
     color: var(--tertiary-color);
   }
 
+  .sideLink:hover h1 {
+    color: var(--tertiary-color);
+  }
+
   .innerSideLink {
+    gap: 10px;
     display: flex;
     position: relative;
     align-items: center;
@@ -74,27 +79,25 @@
   }
 
   .innerSideLink h1 {
-    background-color: var(--tertiary-color);
+
     font-weight: var(--font-poppins-extralight);
-    color: var(--primary-color);
+    color: var(--dark-light);
     text-transform: capitalize;
-    border-radius: 6px;
-    position: absolute;
-    font-size: 0.8rem;
+    font-size: 1rem;
     text-wrap: nowrap;
-    display: none;
-    padding: 10px;
-    left: 70px;
+    display: flex;
+
   }
 
   .activeLink .linkIcon {
     color: var(--tertiary-color);
   }
 
-  .linkIcon {
-    font-size: 24px;
-    color: var(--light-color);
+  .activeLink  h1 {
+    color: var(--tertiary-color);
   }
+
+
 
   .sideBottomContainer {
     gap: 20px;
@@ -122,18 +125,32 @@
     min-width: var(--sidenav-width);
   }
 
-  .linkIcon {
-    font-size: 28px;
-  }
-
-
   .logo {
     height: auto;
     width: 80px;
   }
 
   .sideTop {
+    gap: 30px;
     overflow: visible;
+    text-align: center;
+    align-items: center;
+  }
+
+  .innerSideLink h1 {
+    font-weight: var(--font-poppins-regular);
+    background-color: var(--tertiary-color);
+    color: var(--primary-color);
+    border-radius: 6px;
+    position: absolute;
+    font-size: 0.8rem;
+    display: none;
+    padding: 10px;
+    left: 50px;
+  }
+
+  .sideLink:hover h1 {
+    color: var(--primary-color);
   }
   
 }
